# LifeEngine-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build.ps1
include/lifeengine/: core.hpp
include/lifeengine/gui/: application.hpp  renderer.hpp
src/: core.cpp  main.cpp
src/gui/: application.cpp  main.cpp  renderer.cpp  win32_app.cpp
tests/: core_tests.cpp  gui_model_tests.cpp  perf_smoke_tests.cpp
